<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/colorBackgorund">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar_detail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        />

    <TextView
        android:id="@+id/tv_username_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/img_avatar_detail"
        app:layout_constraintStart_toStartOf="@id/img_avatar_detail"
        app:layout_constraintTop_toBottomOf="@id/img_avatar_detail"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_username_detail"
        app:layout_constraintStart_toStartOf="@id/tv_username_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_username_detail"
        android:text="@string/name"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_company_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_name_detail"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
        android:text="@string/company"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_location_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_company_detail"
        app:layout_constraintStart_toStartOf="@id/tv_company_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_company_detail"
        android:text="@string/location"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_repository_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_location_detail"
        app:layout_constraintStart_toStartOf="@id/tv_location_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_location_detail"
        android:text="@string/repository"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_followers_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_repository_detail"
        app:layout_constraintStart_toStartOf="@id/tv_repository_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_repository_detail"
        tools:text="@string/jumlah_foll"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:paddingStart="80dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_following_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_foll"
        android:fontFamily="sans-serif-black"
        android:gravity="end"
        android:paddingEnd="80dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_repository_detail"
        app:layout_constraintRight_toLeftOf="@id/tv_repository_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_repository_detail"/>

    <ProgressBar
        android:id="@+id/progressBar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabs"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:minHeight="?actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/tv_following_detail"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:tabTextColor="@color/white"/>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_pager"
        android:background="@color/white"
        android:layout_marginTop="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"/>

</androidx.constraintlayout.widget.ConstraintLayout>